==> davidbuzz/ardupilot/libraries/AP_HAL_ESP32/AnalogIn.cpp <==
#include <AP_HAL/AP_HAL.h>
#include <AP_HAL_ESP32/Semaphores.h>
#include <stdlib.h>
#include <stdio.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/gpio.h"
#include "driver/adc.h"
#include "esp_adc_cal.h"
#include "AnalogIn.h"
#define ESP32_ADC_MAVLINK_DEBUG 0
#include <GCS_MAVLink/GCS_MAVLink.h>
#define ANLOGIN_DEBUGGING 0
#define VOLTAGE_SCALING (3.3f/4096.0f)
# define Debug(fmt, args ...)  do {printf("%s:%d: " fmt "\n", __FUNCTION__, __LINE__, ## args); } while(0)
# define Debug(fmt, args ...)
#define ADC_GRP1_NUM_CHANNELS   ARRAY_SIZE(AnalogIn::pin_config)
#define DEFAULT_VREF    1100       //Use adc2_vref_to_gpio() to obtain a better estimate
#define NO_OF_SAMPLES   256          //Multisampling

float AnalogSource::read_average()
{
    if ( _ardupin == ANALOG_INPUT_NONE )  return 0.0f;

	WITH_SEMAPHORE(_semaphore);

	if (_sum_count == 0) {
        uint32_t adc_reading = 0;
        //Multisampling
        for (int i = 0; i < NO_OF_SAMPLES; i++) {
            if (_unit == 1) {
                adc_reading += adc1_get_raw((adc1_channel_t)_pin);
            } else {
                int raw;
                adc2_get_raw((adc2_channel_t)_pin, ADC_WIDTH_BIT_12, &raw);
                adc_reading += raw;
            }
        }
        adc_reading /= NO_OF_SAMPLES;
		return adc_reading;
	}

	_value = _sum_value / _sum_count;
	_sum_value = 0;
	_sum_count = 0;

	return _value;
}

void AnalogSource::set_pin(uint8_t ardupin)
{

    if (_ardupin == ardupin) {
        return;
    }

    int8_t pinconfig_offset = AnalogIn::find_pinconfig(ardupin);
    if (pinconfig_offset == -1 ) {
        hal.console->printf("AnalogIn: sorry set_pin() can't determine ADC1 offset from ardupin : %d \n",ardupin);
        return ;
    }

    int16_t newgpioAdcPin = AnalogIn::pin_config[(uint8_t)pinconfig_offset].channel;
    float newscaler = AnalogIn::pin_config[(uint8_t)pinconfig_offset].scaling;

	if (_pin == newgpioAdcPin) {
		return;
	}

	WITH_SEMAPHORE(_semaphore);

    // init the target pin now if possible
    if ( ardupin != ANALOG_INPUT_NONE ) {

	    gpio_num_t gpio; // new gpio
	    //Configure ADC
	    if (_unit == 1) {
		    adc1_config_channel_atten((adc1_channel_t)newgpioAdcPin, atten);
		    adc1_pad_get_io_num((adc1_channel_t)newgpioAdcPin, &gpio);
	    } else {
		    adc2_config_channel_atten((adc2_channel_t)newgpioAdcPin, atten);
	    }

        esp_adc_cal_characteristics_t adc_chars;
        esp_adc_cal_characterize(ADC_UNIT_1, atten, ADC_WIDTH_BIT_12, DEFAULT_VREF, &adc_chars);
	    printf("AnalogIn: Adding gpio on: %d\n", gpio);


        hal.console->printf("AnalogIn: set_pin() FROM (ardupin:%d adc1_offset:%d gpio:%d) TO (ardupin:%d adc1_offset:%d gpio:%d)\n", \
                               _ardupin,_pin,_gpio,ardupin,newgpioAdcPin,gpio);
	    _pin = newgpioAdcPin;
        _ardupin = ardupin;
        _gpio = gpio;
        _scaler = newscaler;

    }

	_sum_value = 0;
	_sum_count = 0;
	_latest_value = 0;
	_value = 0;

}

void AnalogIn::init()
{
	check_efuse();

	adc1_config_width(ADC_WIDTH_BIT_12);
}

void AnalogIn::_timer_tick()
{
	for (uint8_t j = 0; j < ANALOG_MAX_CHANNELS; j++) {
		ESP32::AnalogSource *c = _channels[j];
		if (c != nullptr) {
			// add a value
			//c->_add_value();
		}
	}

#if ESP32_ADC_MAVLINK_DEBUG
	static uint8_t count;
	if (AP_HAL::millis() > 5000 && count++ == 10) {
		count = 0;
		uint16_t adc[6] {};
		uint8_t n = ADC_GRP1_NUM_CHANNELS;
		if (n > 6) {
			n = 6;
		}
		for (uint8_t i = 0; i < n; i++) {
			adc[i] = buf_adc[i];
		}
		mavlink_msg_ap_adc_send(MAVLINK_COMM_0, adc[0], adc[1], adc[2], adc[3], adc[4],
								adc[5]);
	}
#endif

}

AP_HAL::AnalogSource *AnalogIn::channel(int16_t ardupin)
{
    int8_t pinconfig_offset = find_pinconfig(ardupin);

    int16_t gpioAdcPin = -1;
    float scaler = -1;

    if ((ardupin != ANALOG_INPUT_NONE) && (pinconfig_offset == -1 )) {
        hal.console->printf("AnalogIn: sorry channel() can't determine ADC1 offset from ardupin : %d \n",ardupin);
        ardupin = ANALOG_INPUT_NONE; // default it to this not terrible value and allow to continue
    }
    // although ANALOG_INPUT_NONE=255 is not a valid pin, we let it through here as
    //  a special case, so that it can be changed with set_pin(..) later.
    if (ardupin != ANALOG_INPUT_NONE) {
        gpioAdcPin = pin_config[(uint8_t)pinconfig_offset].channel;
        scaler = pin_config[(uint8_t)pinconfig_offset].scaling;
    }

	for (uint8_t j = 0; j < ANALOG_MAX_CHANNELS; j++) {
		if (_channels[j] == nullptr) {
			_channels[j] = new AnalogSource(ardupin,gpioAdcPin, scaler,0.0f,1);

            if (ardupin != ANALOG_INPUT_NONE) {
            	hal.console->printf("AnalogIn: channel:%d attached to ardupin:%d at adc1_offset:%d on gpio:%d\n",\
                    j ,ardupin, gpioAdcPin, _channels[j]->_gpio);
            }

            if (ardupin == ANALOG_INPUT_NONE) {
            	hal.console->printf("AnalogIn: channel:%d created but using delayed adc and gpio pin configuration\n",j );
            }

			return _channels[j];
		}
	}
	hal.console->printf("AnalogIn: out of channels\n");
	return nullptr;
}
